--- a/style.css
+++ b/style.css
@@ -14,21 +14,33 @@ body {
     padding: 0px 50px;
 }
 
-.navbar .logo {
+.navbar .container {
     display: flex;
     gap: 15px;
     height: 50px;
 }
 
-.navbar .logo #logosenna {
+.navbar .container #logosenna {
     border-radius: 10px;
     border: 3px solid #fff;
     background: #1f1f1f;
 }
 
+.btn-menu {
+    display: none;
+}
+
+.btn-close {
+    display: none;
+}
+
 .navbar .menu {
-    display: flex;
     gap: 30px;
+    z-index: 1002;
+}
+
+.menu ul {
+    display: flex;
 }
 
 .navbar .menu li a{
@@ -44,13 +56,14 @@ body {
     border-bottom: 3px solid #1f1f1f;
 }
 
-.home {
+#home {
     display: flex;
     position: relative;
     min-height: calc(100vh - 80px);
+    z-index: 1;
 }
 
-.home .homeContent {
+#home .homeContent {
     display: flex;
     justify-content: space-between;
     background-color: #1f1f1f;
@@ -61,14 +74,15 @@ body {
     box-shadow: 1px 1px 20px 1px #000000;
 }
 
-.home .homeContent .bg-image {
+#home .homeContent .bg-image {
+    margin-top: 10px;
     border-radius: 0px 13px 13px 0px;
     width: 100%;
     height: 100vh;
     object-fit: cover;
 }
 
-.home .homeContent .titulo {
+#home .homeContent .titulo {
     background-color: #1f1f1f;
     display: flex;
     border-radius: 13px 0px 0px 13px;
@@ -80,7 +94,7 @@ body {
     max-width: 780px;
 }
 
-.home .homeContent .titulo h1 {
+#home .homeContent .titulo h1 {
     margin-bottom: 0px;
 }
 
@@ -92,7 +106,7 @@ body {
     min-height: calc(100vh - 80px);
 }
 
-.feitos .infoFeitos{
+.feitos .infoFeitos {
     display: flex;
     justify-content: space-between;
     background-color: #1f1f1f;
@@ -170,7 +184,7 @@ body {
     min-height: calc(100vh - 80px);
 }
 
-.mvf1 .infoDonington{
+.mvf1 .infoDonington {
     display: flex;
     justify-content: space-between;
     background-color: #1f1f1f;
@@ -221,31 +235,30 @@ body {
 
 /*Mensagem*/
 
-.inspiração {
+.inspiracao {
     display: flex;
     position: relative;
     min-height: calc(100vh - 80px);
 }
 
-.inspiração .mensagem{
+.inspiracao .mensagem {
     display: flex;
     justify-content: space-between;
     background-color: #1f1f1f;
     width: 100%;
     border-radius: 20px;
     margin: 20px;
-    box-shadow: 3px 3px 10px 3px#000000;
+    box-shadow: 3px 3px 10px 3px #000000;
 }
 
-.inspiração .mensagem #sennaR {
+.inspiracao .mensagem #sennaR {
     border-radius: 20px 0px 0px 20px;
     width: 55%;
     object-fit: cover;
     height: 100vh;
 }
 
-.inspiração .mensagem .exemploD {
-    background-color: #1f1f1f;
+.inspiracao .mensagem .exemploD {
     display: flex;
     margin-right: 8%;
     border-radius: 0px 13px 13px 0px;
@@ -284,3 +297,303 @@ body {
     border-radius: 10px;
 }
 
+@media screen and (max-width: 600px) {
+    .navbar {
+        height: 80px;
+        background-color: #e91e1e;
+        display: flex;
+        margin: 5px;
+        border-radius: 10px;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px 50px;
+    }
+    
+    .navbar .container {
+        display: flex;
+        gap: 15px;
+        height: 50px;
+    }
+    
+    .navbar .container #logosenna {
+        margin-left: -25px;
+        border-radius: 10px;
+        border: 3px solid #fff;
+        background: #1f1f1f;
+    }
+    
+    .bg-gradient {
+        background: #1f1f1f;
+    }
+
+    .btn-menu {
+        display: block;
+        margin-right: -25px;
+        width: 56px;
+        height: 56px;
+        float: right;
+        text-align: center;
+        color: #1f1f1f;
+        border-radius: 56px;
+        cursor: pointer;
+    }
+    
+    /*Menu*/
+    
+    .navbar .menu {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.9);
+        top: 0;
+        left: 0;
+    }
+
+    .navbar .menu .btn-close{
+        display: flex;
+        margin-top: -200px;
+        margin-left: -300px;
+        margin-bottom: 100px;
+        font-size: 1.5em;
+        color: #1f1f1f;
+        float: right;
+        cursor: pointer;
+    }
+
+    .navbar .menu ul {
+        display: flex;
+        gap: 30px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        float: left;
+        text-align: center;
+    }
+    
+    .navbar .menu li a {
+        color: #ffffff;
+        border: 1px solid;
+        padding: 10px;
+        border-radius: 10px;
+        background: #1f1f1f;
+    }
+    
+    .navbar .menu li a:hover {
+        border: 1px solid #e91e1e;
+    }
+
+    #home .homeContent {
+        display: grid;
+        background-color: #1f1f1f;
+        border: 5px solid #fff;
+        width: 100%;
+        border-radius: 20px;
+        margin: 5px;
+        box-shadow: 1px 1px 20px 1px #000000;
+    }
+
+    #home .homeContent .titulo {
+        background-color: #1f1f1f;
+        display: block;
+        border-radius: 13px;
+        flex-direction: none;
+        justify-content: none;
+        height: 60vh;
+        padding: 10px;
+        max-width: 780px;
+        margin: 15px;
+    }
+
+    #home .homeContent .titulo h1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+        font-size: 25px;
+        height: 100px;
+    }
+
+    #home .homeContent .titulo h2 {
+        margin-top: 10px;
+        text-align: center;
+    }
+
+    #home .homeContent .titulo p {
+        margin-top: 30px;
+    }
+
+    #home .homeContent .bg-image {
+        width: 356px;
+        height: 250px;
+        border-radius: 0px 0px 13px 13px;
+        object-fit: fill;
+    }
+
+
+    /*Feitos */
+
+    .feitos {
+        display: flex;
+        position: relative;
+        min-height: calc(100vh - 80px);
+    }
+    
+    .feitos .infoFeitos {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #1f1f1f;
+        width: 100%;
+        border-radius: 20px;
+        margin: 5px;
+        box-shadow: 1px 1px 20px 1px #000000;
+    }
+    
+    .feitos .infoFeitos #senna3motores {
+        border-radius: 13px 13px 0px 0px;
+        width: 100%;
+        object-fit: cover;
+        height: 60vh;
+    }
+    
+    .feitos .infoFeitos .records {
+        font-size: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 13px;
+        height: 60vh;
+        padding: 10px;
+        max-width: 780px;
+        margin: 5px;
+    }
+    
+    .records h2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .records ul {
+        font-size: 12px;
+    }
+
+    /*Melhor volta da F1*/
+
+    .mvf1 {
+        display: flex;
+        position: relative;
+        min-height: calc(100vh - 80px);
+    }
+    
+    .mvf1 .infoDonington {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #1f1f1f;
+        width: 100%;
+        height: 100vh;
+        border-radius: 20px;
+        margin: 5px;
+        overflow: hidden;
+        box-shadow: 3px 3px 10px 3px#000000;
+    }
+    
+    .mvf1 .infoDonington .mvf1Registros {
+        background-color: #1f1f1f;
+        display: flex;
+        flex-direction: column;
+        border-radius: 0px 13px 13px 0px;
+        justify-content: center;
+        height: 80vh;
+        gap: 40px;
+        padding: 80px 80px;
+        max-width: 780px;
+    }
+    
+    .mvf1 .infoDonington #senna1993 {
+        width: 100%;
+        height: 100vh;
+        object-fit: contain;
+    }
+    
+    .mvf1 h2 {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+        font-size: 30px;
+        text-align: center;
+    }
+    
+    .mvf1 h3 {
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+    }
+    
+    .div-video-player {
+        border: 4px solid;
+        width: 300px;
+        height: 200px;
+        border-radius: 20px;
+        box-shadow: 1px 1px 10px 1px #fff;
+    }
+
+    /*Mensagem*/
+    
+    .inspiracao .mensagem {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #1f1f1f;
+        width: 100%;
+        border-radius: 20px;
+        margin: 5px;
+        box-shadow: 3px 3px 10px 3px #000000;
+    }
+    
+    .inspiracao .mensagem #sennaR {
+        border-radius: 20px 20px 0px 0px;
+        width: 365px;
+        height: 450px;
+        object-fit: fill;
+    }
+    
+    .inspiracao .mensagem .exemploD {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50vh;
+        border-radius: 0px 13px 13px 0px;
+        margin: 20px;
+        gap: 50px;
+        padding: 20px;
+    }
+    
+    .exemploD h2 {
+        font-size: 25px;
+        text-align: center;
+    }
+    
+    .exemploD p {
+        font-size: 20px;
+    }
+    
+    .exemploD #autor {
+        font-size: 16px;
+    }
+
+    .footer__bar {
+        margin: 5px;
+    }
+}
