--- a/style.css
+++ b/style.css
@@ -381,7 +381,8 @@ body {
     }
     
     .navbar .menu li a:hover {
-        border: 1px solid #e91e1e;
+        border: 3px solid #ffffff;
+        color: #ffffff;
     }
 
     #home .homeContent {
