--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ body {
     }
 
     #home .homeContent .bg-image {
-        width: 356px;
+        width: 100%;
         height: 250px;
         border-radius: 0px 0px 13px 13px;
         object-fit: fill;
@@ -563,7 +563,7 @@ body {
     
     .inspiracao .mensagem #sennaR {
         border-radius: 20px 20px 0px 0px;
-        width: 365px;
+        width: 100%;
         height: 450px;
         object-fit: fill;
     }
